--- a/app/src/main/res/layout/play_show.xml
+++ b/app/src/main/res/layout/play_show.xml
@@ -6,9 +6,11 @@
     >
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/show_image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
+        android:layout_margin="20dp"
         />
 
 
@@ -16,19 +18,81 @@
         android:id="@+id/show_song_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
         android:textColor="#000000"
-        android:textSize="25sp"
-        android:text="666666"
+        android:textSize="30sp"
+        android:layout_margin="10dp"
         />
 
     <TextView
         android:id="@+id/show_song_artist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textSize="15sp"
-        android:text="8888888"
-        />
+        android:layout_margin="5dp"
+        android:gravity="center_horizontal"
+        android:textSize="20sp" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        >
+
+        <TextView
+            android:id="@+id/show_current_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            />
+
+        <!-- 进度条 -->
+        <SeekBar
+            android:id="@+id/show_progress"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:id="@+id/show_max_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
+        >
+        <ImageButton
+            android:id="@+id/show_previous"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/show_previous"
+            android:background="#ffffff"
+            />
+        <ImageButton
+            android:id="@+id/show_play_stop"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/show_stop"
+            android:background="#ffffff"
+            />
+        <ImageButton
+            android:id="@+id/show_next"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/show_next"
+            android:background="#ffffff"
+            />
+    </LinearLayout>
 
 </LinearLayout>
