--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -30,25 +30,25 @@
         android:id="@+id/music_layout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/music_text"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                />
+                android:layout_weight="1" />
 
             <RelativeLayout
                 android:id="@+id/music_button_layout"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                >
+                android:layout_height="match_parent">
+
                 <ImageButton
                     android:id="@+id/music_next"
                     android:layout_width="45sp"
@@ -56,25 +56,24 @@
                     android:layout_marginTop="5dp"
                     android:layout_toRightOf="@+id/music_play"
                     android:background="#ffffff"
-                    android:src="@drawable/play_fm_btn_next"
-                    />
+                    android:src="@drawable/play_fm_btn_next" />
+
                 <ImageButton
                     android:id="@+id/music_play"
                     android:layout_width="45sp"
                     android:layout_height="45sp"
                     android:layout_marginTop="5dp"
                     android:background="#ffffff"
-                    android:src="@drawable/play_fm_btn_play"
-                    />
+                    android:src="@drawable/play_fm_btn_play" />
             </RelativeLayout>
         </LinearLayout>
+
         <SeekBar
             android:id="@+id/music_progress"
             android:layout_width="match_parent"
             android:layout_height="5dp"
             android:max="100"
-            android:progress="70"
-            />
+            android:progress="70" />
     </LinearLayout>
 
 
