--- a/app/src/main/res/layout/fragment_mymusic.xml
+++ b/app/src/main/res/layout/fragment_mymusic.xml
@@ -4,5 +4,26 @@
     android:layout_height="match_parent">
 
 
+    <TextView
+        android:id="@+id/mymusic_textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="我喜欢的歌曲"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:gravity="center_horizontal"
+        android:layout_margin="10dp"
+        />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#EFEFEF"
+        />
+    <ListView
+        android:id="@+id/mymusic_like_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        />
 
 </LinearLayout>
