--- a/app/src/main/res/layout/mymusic_view.xml
+++ b/app/src/main/res/layout/mymusic_view.xml
@@ -4,14 +4,15 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/songlist_item"
+        android:id="@+id/mymusic_item"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
+
         <TextView
-            android:id="@+id/songlist_title"
+            android:id="@+id/mymusic_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15sp"
@@ -21,7 +22,7 @@
             android:layout_gravity="center_vertical"
             />
         <TextView
-            android:id="@+id/songlist_artist"
+            android:id="@+id/mymusic_artist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -31,37 +32,12 @@
     </LinearLayout>
 
     <ImageButton
-        android:id="@+id/songlist_likebutton"
+        android:id="@+id/mymusic_decreasebutton"
         android:layout_width="50dp"
         android:layout_height="match_parent"
-        android:src="@mipmap/like_button"
+        android:src="@mipmap/decrease"
         android:background="#00000000"
         android:layout_gravity="center_vertical"
         />
-
-
-    <!--<TextView-->
-        <!--android:id="@+id/songlist_title"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textSize="15sp"-->
-        <!--android:textColor="#000000"-->
-        <!--android:paddingLeft="5dp"-->
-        <!--android:paddingTop="12dp"-->
-        <!--android:layout_gravity="center_vertical"-->
-        <!--/>-->
-    <!--<TextView-->
-        <!--android:id="@+id/songlist_artist"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center_vertical"-->
-        <!--android:paddingLeft="5dp"-->
-        <!--android:paddingBottom="12dp"-->
-        <!--/>-->
-
-
-
-
-
 
 </LinearLayout>
